--- a/libraries/ndf/ssn20.tex
+++ b/libraries/ndf/ssn20.tex
@@ -1,276 +1,48 @@
-\documentstyle[11pt]{article}
-\pagestyle{myheadings}
+\documentclass[11pt,twoside,nolof]{starlink}
 
 % -----------------------------------------------------------------------------
-% ? Document identification
-\newcommand{\stardoccategory}  {Starlink System Note}
-\newcommand{\stardocinitials}  {SSN}
-\newcommand{\stardocsource}    {ssn20.3}
-\newcommand{\stardocnumber}    {20.3}
-\newcommand{\stardocauthors}   {R.F.Warren-Smith \& D.S.Berry}
-\newcommand{\stardocdate}      {17th July 2000}
-\newcommand{\stardoctitle}     {Adding Format Conversion\\
-                                Facilities to the NDF\\
+% Document identification
+\stardoccategory    {Starlink System Note}
+\stardocinitials    {SSN}
+\stardocsource      {ssn20.3}
+\stardocnumber      {20.3}
+\stardocauthors     {R.F.Warren-Smith \& D.S.Berry}
+\stardocdate        {17th July 2000}
+\stardoctitle       {Adding Format Conversion
+                                Facilities to the NDF
                                 Data Access Library}
-\newcommand{\stardocversion}   {Version 1.6}
-\newcommand{\stardocmanual}    {Developer's Guide}
-% ? End of document identification
+\stardocversion     {Version 1.6}
+\stardocmanual      {Developer's Guide}
+\stardocname  {\stardocinitials /\stardocnumber}
+\stardocabstract{ The NDF (\st{Extensible N-Dimensional Data
+    Format\/}) data access library (\xref{SUN/33}{sun33}{}) provides a
+  programming interface and a data model for astronomical applications
+  software. It is based on a flexible underlying data format HDS
+  (\xref{SUN/92}{sun92}{}) and a set of conventions for structuring
+  data within HDS.
+
+  This document describes facilities for extending the range of data
+  formats accessible via the NDF library, to include any arbitrary
+  ``foreign'' format for which a conversion utility can be defined.
+  This gives NDF-based applications access to a potentially wide range
+  of data formatting possibilities, including data compression.  The
+  intended readership of this document includes a) Developers working
+  with data formats and associated conversion utilities; b)
+  programmers who anticipate using the NDF library to access foreign
+  data; and c) knowledgeable users who need to access data stored in
+  new (\st{e.g.}\ personal) formats.  }
 % -----------------------------------------------------------------------------
 
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markright{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
+% Document specific \providecommand or \newenvironment commands.
+\providecommand{\file}[1]{{\tt{#1}}}
+\providecommand{\st}[1]{{\em{#1}}}
+
+\providecommand{\fitsurl}[0]{http://www.gsfc.nasa.gov/astro/fits/fits_home.html}
 
 % -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
 
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  star2html to signify raw TeX that latex2html cannot process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newenvironment{latexonly}{}{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\html}[1]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{{\bf LaTeX}{2}{\tt{HTML}}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\newcommand{\latex}[1]{#1}
-\newcommand{\setunderscore}{\renewcommand{\_}{{\tt\symbol{95}}}}
-\latex{\setunderscore}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on  the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-\newcommand{\file}[1]{{\tt{#1}}}
-\newcommand{\st}[1]{{\em{#1}}}
-
-\newcommand{\fitsurl}[0]{http://www.gsfc.nasa.gov/astro/fits/fits_home.html}
-
-% ? End of document specific commands
-% -----------------------------------------------------------------------------
-%  Title Page.
-%  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / {\sc Rutherford Appleton Laboratory} \hfill {\bf \stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\bf  \stardoctitle \\ [2.5ex]}
-   {\LARGE\bf \stardocversion \\ [4ex]}
-   {\Huge\bf  \stardocmanual}
-   \end{center}
-   \vspace{15mm}
-
-% ? Heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\bf Description}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle
-   \begin{rawhtml} </H1> \end{rawhtml}
-
-% ? Add picture here if required.
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{description}\xlabel{abstract}Description}
-% ? End of new section for abstract
-
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-The NDF (\st{Extensible N-Dimensional Data Format\/}) data access
-library (\xref{SUN/33}{sun33}{}) provides a programming interface and
-a data model for astronomical applications software. It is based on a
-flexible underlying data format HDS (\xref{SUN/92}{sun92}{}) and a set
-of conventions for structuring data within HDS.
-
-This document describes facilities for extending the range of data
-formats accessible via the NDF library, to include any arbitrary
-``foreign'' format for which a conversion utility can be defined.
-This gives NDF-based applications access to a potentially wide range
-of data formatting possibilities, including data compression.
-
-The intended readership of this document includes:
-\begin{enumerate}
-\item Developers working with data formats and associated conversion
-utilities,
-\item Programmers who anticipate using the NDF library to access foreign data,
-\item Knowledgeable users who need to access data stored in new
-(\st{e.g.}\ personal) formats.
-\end{enumerate}
-% ? End of document abstract
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
- \newpage
- \begin{latexonly}
-   \null\vspace {5mm}
-   \begin {center}
-   \rule{80mm}{0.5mm} \\ [1ex]
-   {\Large\bf \stardoctitle \\ [2.5ex]
-              \stardocversion} \\ [2ex]
-   \rule{80mm}{0.5mm}
-   \end{center}
-   \setlength{\parskip}{0mm}
-   \tableofcontents
-   \setlength{\parskip}{\medskipamount}
-   \markright{\stardocname}
- \end{latexonly}
-
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-\newpage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
-\begin{latexonly}
-   \null\vspace {5mm}
-   \begin {center}
-   \rule{80mm}{0.5mm} \\ [1ex]
-   {\Large\bf \stardoctitle \\ [2.5ex]
-              \stardocversion} \\ [2ex]
-   \rule{80mm}{0.5mm}
-   \end{center}
-   \vspace{30mm}
-\end{latexonly}
+\scfrontmatter
 
 \section{INTRODUCTION}
 
@@ -420,13 +192,9 @@ extension will be used to determine which format a file is written in.
 This is done by defining the environment variable called
 NDF\_FORMATS\_IN to contain a format list, such as the following:
 
-\begin{quote}
-\begin{small}
-\begin{verbatim}
+\begin{terminalv}
 setenv NDF_FORMATS_IN 'FITS(.fit),FIGARO(.dst),IRAF(.imh)'
-\end{verbatim}
-\end{small}
-\end{quote}
+\end{terminalv}
 
 This is a comma-separated list of format specifications, where each
 specification consists of a format name
@@ -512,14 +280,10 @@ example, this means defining up to two commands -- one for converting
 from FITS format to NDF format and the other for converting back
 again, such as the following:
 
-\begin{quote}
-\begin{small}
-\begin{verbatim}
+\begin{terminalv}
 setenv NDF_FROM_FITS 'fitsin in=^dir^name^type out=^ndf'
 setenv NDF_TO_FITS   'fitsout in=^ndf out=^dir^name^type'
-\end{verbatim}
-\end{small}
-\end{quote}
+\end{terminalv}
 
 Here, the names of two environment variables have been formed by
 prefixing `NDF\_FROM\_' and `NDF\_TO\_' to the foreign format name (in
@@ -557,17 +321,17 @@ NDF library defines a set of them for this purpose, as follows:
 \begin{center}
 \begin{tabular}{|l|l|}
 \hline
-{\bf Token} & {\bf Value}\\
+\textbf{Token} & \textbf{Value}\\
 \hline\hline
-{\bf dir}   & Directory in which the foreign file resides\\
-{\bf name}  & Foreign file name (without directory or extension)\\
-{\bf type}  & Foreign file extension (with leading `.')\\
-{\bf vers}  & Foreign file version number (blank if not supported)\\
-{\bf fxs}   & Foreign extension specifier (see \S\ref{sect:fxs} )\\
-{\bf fxscl} & Clean version of {\bf fxs} (all non-alphanumeric characters
+\textbf{dir}   & Directory in which the foreign file resides\\
+\textbf{name}  & Foreign file name (without directory or extension)\\
+\textbf{type}  & Foreign file extension (with leading `.')\\
+\textbf{vers}  & Foreign file version number (blank if not supported)\\
+\textbf{fxs}   & Foreign extension specifier (see \S\ref{sect:fxs} )\\
+\textbf{fxscl} & Clean version of \textbf{fxs} (all non-alphanumeric characters
 replaced by underscores)\\
-{\bf fmt}   & Foreign format name (upper case)\\
-{\bf ndf}   & Full name of the native NDF format copy of the dataset\\
+\textbf{fmt}   & Foreign format name (upper case)\\
+\textbf{ndf}   & Full name of the native NDF format copy of the dataset\\
 \hline
 \end{tabular}
 \end{center}
@@ -582,30 +346,29 @@ arranged by wrapping it up in a simple script if necessary.
 The native HDS format allows multiple NDFs to be stored within a single disk
 file, and some foreign data formats provide somewhat similar facilities.
 As a concrete example, the FITS format allows images to be stored within
-{\em image extensions}, so a single FITS file may contain several images,
+\emph{image extensions}, so a single FITS file may contain several images,
 each of which can be thought of as a foreign format NDF. When an
 NDF application is run, a specific NDF within such a FITS file can be
-selected by appending a {\em foreign extension specifier} (FXS) to the
+selected by appending a \emph{foreign extension specifier} (FXS) to the
 end of the file name. A foreign extension specifier consists of a string
 delimited by matching square brackets. The string identifies a sub-structure
 within the specified file, using syntax specific to the data format. So,
-for instance, the second image extension within a FITS file called {\tt
-m51.fit} could be specified using the string ``{\tt m51.fit[2]}''. Here, the
-sub-string ``{\tt [2]}'' forms the foreign extension specifier, and uses the
+for instance, the second image extension within a FITS file called \texttt{m51.fit} could be specified using the string ``\texttt{m51.fit[2]}''. Here, the
+sub-string ``\texttt{[2]}'' forms the foreign extension specifier, and uses the
 syntax expected by the CONVERT application FITS2NDF.
 
 The foreign extension specifier is made available to external commands
-using a message token called {\bf fxs}. Since this will certainly include
+using a message token called \textbf{fxs}. Since this will certainly include
 square brackets (and possibly other non-alphanumeric characters), it
 cannot safely be included directly within the name of a file. You may
 want to do this for instance, when setting up the NDF\_KEEP\_  or
 NDF\_TEMP\_ environment variables. For this reason, a ``cleaned'' version
 of the foreign extension specifier is also available, in a message token
-called {\bf fxscl}. This is equal to {\bf fxs} except that all
+called \textbf{fxscl}. This is equal to \textbf{fxs} except that all
 non-alphanumeric characters are replaced by underscores.
 
 \begin{center}
-{\em Note, currently the NDF library only allows foreign extension specifiers
+\emph{Note, currently the NDF library only allows foreign extension specifiers
 to be given when accessing existing NDFs for read-only access. An error
 will be reported if an FXS is included in the name of an NDF to be
 created, or an existing NDF for which update or write access is required.}
@@ -671,13 +434,9 @@ The output format list is found by translating the environment
 variable NDF\_FORMATS\_OUT, which might typically have a definition
 such as:
 
-\begin{quote}
-\begin{small}
-\begin{verbatim}
+\begin{terminalv}
 setenv NDF_FORMATS_OUT '.,FITS(.fit),FIGARO(.dst),IRAF(.imh)'
-\end{verbatim}
-\end{small}
-\end{quote}
+\end{terminalv}
 
 Ignoring, for the moment, the `.' at the start, this list defines the
 names of foreign data formats which are to be recognised when creating
@@ -730,13 +489,9 @@ However, if you wanted to work predominantly with a foreign format
 not access NDF data directly), then you could put that format at the
 start of the output format list. For example:
 
-\begin{quote}
-\begin{small}
-\begin{verbatim}
+\begin{terminalv}
 setenv NDF_FORMATS_OUT 'IRAF(.imh),FITS(.fit)'
-\end{verbatim}
-\end{small}
-\end{quote}
+\end{terminalv}
 
 would cause all output files to be written in \xref{IRAF}{sun179}{}
 format and to have a file extension of `.imh' by default. You could
@@ -749,13 +504,9 @@ The output format may also be determined according to the format of a
 related input dataset. This is achieved by putting the ``wild-card''
 character `$*$' at the start of the output format list, as follows:
 
-\begin{quote}
-\begin{small}
-\begin{verbatim}
+\begin{terminalv}
 setenv NDF_FORMATS_OUT '*,.,FIGARO(.dst),FITS(.fit),IRAF(.imh)
-\end{verbatim}
-\end{small}
-\end{quote}
+\end{terminalv}
 
 This affects new datasets which are created as a result of the
 \st{propagation} of information from an existing dataset
@@ -843,9 +594,7 @@ format. Typically, commands such as these would appear in a startup
 file, perhaps packaged as part of a ``driver'' that could be installed
 to give access to the data format in question:
 
-\begin{quote}
-\begin{small}
-\begin{verbatim}
+\begin{terminalv}
 #  Ensure that the new format and its file extension are recognised on
 #  input.
       if ($?NDF_FORMATS_IN) then
@@ -865,9 +614,7 @@ to give access to the data format in question:
 #  vice versa.
       setenv NDF_FROM_NEW 'new2ndf in='\'^dir^name^type\'' out='\'^ndf\'
       setenv NDF_TO_NEW   'ndf2new in='\'^ndf\'' out='\'^dir^name^type\'
-\end{verbatim}
-\end{small}
-\end{quote}
+\end{terminalv}
 
 This example illustrates a couple of points which were not addressed
 earlier:
@@ -883,13 +630,10 @@ from scratch.
 single quote characters appear around the names of datasets. For
 example, the translation of the environment variable NDF\_FROM\_NEW
 would be:
-\begin{quote}
-\begin{small}
-\begin{verbatim}
+\begin{terminalv}
 new2ndf in='^dir^name^type' out='^ndf'
-\end{verbatim}
-\end{small}
-\end{quote}
+\end{terminalv}
+
 Although the syntax needed is a bit messy, this does mean that any
 special characters that appear in dataset names will be handled
 correctly (\st{i.e.}\ literally), and not expanded by the shell that
@@ -920,13 +664,9 @@ Taking the IRAF format as an example, the command would be defined via
 the environment variable NDF\_DEL\_IRAF in the same way as when
 defining format conversion commands. For example:
 
-\begin{quote}
-\begin{small}
-\begin{verbatim}
+\begin{terminalv}
 setenv NDF_DEL_IRAF 'rm -f ^dir^name.imh ^dir^name.pix'
-\end{verbatim}
-\end{small}
-\end{quote}
+\end{terminalv}
 
 would unsure that both files associated with the dataset (with
 extensions `.imh' and `.pix') are deleted when necessary.
@@ -940,16 +680,16 @@ defines the following tokens for use in the command:
 \begin{center}
 \begin{tabular}{|l|l|}
 \hline
-{\bf Token} & {\bf Value}\\
+\textbf{Token} & \textbf{Value}\\
 \hline\hline
-{\bf dir}  & Directory in which the foreign file resides\\
-{\bf name} & Foreign file name (without directory or extension)\\
-{\bf type} & Foreign file extension (with leading `.')\\
-{\bf vers} & Foreign file version number (blank if not supported)\\
-{\bf fxs}  & Foreign extension specifier (see \S\ref{sect:fxs} )\\
-{\bf fxscl} & Clean version of {\bf fxs} (all non-alphanumeric characters
+\textbf{dir}  & Directory in which the foreign file resides\\
+\textbf{name} & Foreign file name (without directory or extension)\\
+\textbf{type} & Foreign file extension (with leading `.')\\
+\textbf{vers} & Foreign file version number (blank if not supported)\\
+\textbf{fxs}  & Foreign extension specifier (see \S\ref{sect:fxs} )\\
+\textbf{fxscl} & Clean version of \textbf{fxs} (all non-alphanumeric characters
 replaced by underscores)\\
-{\bf fmt}  & Foreign format name (upper case)\\
+\textbf{fmt}  & Foreign format name (upper case)\\
 \hline
 \end{tabular}
 \end{center}
@@ -976,13 +716,9 @@ routine from within an application, but can also be done by setting
 the environment variable NDF\_KEEP to `1' outside the application (see
 \xref{SUN/33}{sun33}{tuning_the_ndf_system}), for example:
 
-\begin{quote}
-\begin{small}
-\begin{verbatim}
+\begin{terminalv}
 setenv NDF_KEEP 1
-\end{verbatim}
-\end{small}
-\end{quote}
+\end{terminalv}
 
 If this is done, then subsequent access to a foreign format dataset
 (say \file{galaxy.fit}) will create a corresponding native format NDF
@@ -1024,16 +760,16 @@ instances, as follows:
 \begin{center}
 \begin{tabular}{|l|l|}
 \hline
-{\bf Token} & {\bf Value}\\
+\textbf{Token} & \textbf{Value}\\
 \hline\hline
-{\bf dir}  & Directory in which the foreign file resides\\
-{\bf name} & Foreign file name (without directory or extension)\\
-{\bf type} & Foreign file extension (with leading `.')\\
-{\bf vers} & Foreign file version number (blank if not supported)\\
-{\bf fxs}  & Foreign extension specifier (see \S\ref{sect:fxs} )\\
-{\bf fxscl} & Clean version of {\bf fxs} (all non-alphanumeric characters
+\textbf{dir}  & Directory in which the foreign file resides\\
+\textbf{name} & Foreign file name (without directory or extension)\\
+\textbf{type} & Foreign file extension (with leading `.')\\
+\textbf{vers} & Foreign file version number (blank if not supported)\\
+\textbf{fxs}  & Foreign extension specifier (see \S\ref{sect:fxs} )\\
+\textbf{fxscl} & Clean version of \textbf{fxs} (all non-alphanumeric characters
 replaced by underscores)\\
-{\bf fmt}  & Foreign format name (upper case)\\
+\textbf{fmt}  & Foreign format name (upper case)\\
 \hline
 \end{tabular}
 \end{center}
@@ -1043,14 +779,10 @@ ensure that the native NDF data was always stored in its own file in
 the default directory, so that the UNIX ``compress'' utility could
 access it, we might use:
 
-\begin{quote}
-\begin{small}
-\begin{verbatim}
+\begin{terminalv}
 setenv NDF_KEEP_COMPRESSED ^name
 setenv NDF_TEMP_COMPRESSED tmp_^name
-\end{verbatim}
-\end{small}
-\end{quote}
+\end{terminalv}
 
 Then, whatever the setting of the `KEEP' tuning parameter, the name of
 an NDF in the default directory would be generated, so the HDS scratch
@@ -1115,9 +847,7 @@ To illustrate the above, the following is a complete example of the
 C~shell commands that might be used to allow access to compressed NDF
 data files (with file extension `.sdf.Z') on UNIX systems:
 
-\begin{quote}
-\begin{small}
-\begin{verbatim}
+\begin{terminalv}
 #  Define the COMPRESSED format to be recognised on input, with file
 #  extension `.sdf.Z'.
       if ($?NDF_FORMATS_IN) then
@@ -1143,9 +873,7 @@ data files (with file extension `.sdf.Z') on UNIX systems:
 
 #  Suppress processing of extension information for compressed data.
       setenv NDF_XTN_COMPRESSED ''
-\end{verbatim}
-\end{small}
-\end{quote}
+\end{terminalv}
 
 Note that the ``compress'' command has been followed by a null ``:''
 command which does nothing. This is because an error status may be
@@ -1246,13 +974,9 @@ To enable this feature, the `SHCVT' tuning parameter should be set to
 application by setting the NDF\_SHCVT environment variable, as
 follows:
 
-\begin{quote}
-\begin{small}
-\begin{verbatim}
+\begin{terminalv}
 setenv NDF_SHCVT 1
-\end{verbatim}
-\end{small}
-\end{quote}
+\end{terminalv}
 
 \section{DATA EXTENSIBILITY}
 
@@ -1361,7 +1085,7 @@ the NDF dataset that has been built.
 When writing to a foreign dataset, the sequence of events is broadly
 similar, except that the specialist utilities are invoked first
 (before the general purpose one) and transfer information from their
-relevant extensions {\bf into} the FITS extension. The general purpose
+relevant extensions \textbf{into} the FITS extension. The general purpose
 conversion utility then transfers the contents of the FITS extension
 to the foreign dataset as part of its conversion task.
 
@@ -1390,13 +1114,9 @@ It is first necessary to define the set of specialist NDF extensions
 that should be recognised. This is normally done via the environment
 variable NDF\_XTN, as follows:
 
-\begin{quote}
-\begin{small}
-\begin{verbatim}
+\begin{terminalv}
 setenv NDF_XTN CCDPACK,IRAS90
-\end{verbatim}
-\end{small}
-\end{quote}
+\end{terminalv}
 
 This is simply a comma-separated list of extension names conforming to
 the naming conventions described in
@@ -1414,13 +1134,9 @@ separate extension list for a particular foreign format, an
 environment variable is used whose name is constructed by prefixing
 `NDF\_XTN\_' to the format name (in upper case). For example:
 
-\begin{quote}
-\begin{small}
-\begin{verbatim}
+\begin{terminalv}
 setenv NDF_XTN_COMPRESSED ''
-\end{verbatim}
-\end{small}
-\end{quote}
+\end{terminalv}
 
 would over-ride the normal extension list with an empty one so that no
 extension handling would occur when COMPRESSED format data is
@@ -1433,14 +1149,10 @@ defined in the usual way via environment variables whose names are
 formed by prefixing `NDF\_IMP\_' or `NDF\_EXP\_' to the extension name
 (in upper case), for example:
 
-\begin{quote}
-\begin{small}
-\begin{verbatim}
+\begin{terminalv}
 setenv NDF_IMP_CCDPACK 'impccd ndf=^ndf'
 setenv NDF_EXP_CCDPACK 'expccd ndf=^ndf'
-\end{verbatim}
-\end{small}
-\end{quote}
+\end{terminalv}
 
 Here, the extension name is \xref{CCDPACK}{sun139}{} (and should
 appear in the NDF\_XTN list) and the ``impccd'' and ``expccd''
@@ -1454,18 +1166,18 @@ the set of tokens defined for use is as follows:
 \begin{center}
 \begin{tabular}{|l|l|}
 \hline
-{\bf Token} & {\bf Value}\\
+\textbf{Token} & \textbf{Value}\\
 \hline\hline
-{\bf dir}  & Directory in which the foreign file resides\\
-{\bf name} & Foreign file name (without directory or extension)\\
-{\bf type} & Foreign file extension (with leading `.')\\
-{\bf vers} & Foreign file version number (blank if not supported)\\
-{\bf fxs}  & Foreign extension specifier (see \S\ref{sect:fxs} )\\
-{\bf fxscl} & Clean version of {\bf fxs} (all non-alphanumeric characters
+\textbf{dir}  & Directory in which the foreign file resides\\
+\textbf{name} & Foreign file name (without directory or extension)\\
+\textbf{type} & Foreign file extension (with leading `.')\\
+\textbf{vers} & Foreign file version number (blank if not supported)\\
+\textbf{fxs}  & Foreign extension specifier (see \S\ref{sect:fxs} )\\
+\textbf{fxscl} & Clean version of \textbf{fxs} (all non-alphanumeric characters
 replaced by underscores)\\
-{\bf fmt}  & Foreign format name (upper case)\\
-{\bf ndf}  & Full name of the native NDF format copy of the dataset\\
-{\bf xtn}  & Name of the NDF extension (upper case)\\
+\textbf{fmt}  & Foreign format name (upper case)\\
+\textbf{ndf}  & Full name of the native NDF format copy of the dataset\\
+\textbf{xtn}  & Name of the NDF extension (upper case)\\
 \hline
 \end{tabular}
 \end{center}
@@ -1483,14 +1195,10 @@ format name to the usual names shown above. For instance, when
 importing and exporting CCDPACK extension information to
 \xref{FIGARO}{sun86}{} files, one might want to use:
 
-\begin{quote}
-\begin{small}
-\begin{verbatim}
+\begin{terminalv}
 setenv NDF_IMP_CCDPACK_FIGARO 'impccd ndf=^ndf file=^dir^name^type'
 setenv NDF_EXP_CCDPACK_FIGARO 'expccd ndf=^ndf file=^dir^name^type'
-\end{verbatim}
-\end{small}
-\end{quote}
+\end{terminalv}
 
 If these variables were defined, they would over-ride any defined
 without the `\_FIGARO' suffix when accessing that particular format.
@@ -1509,13 +1217,9 @@ table stored in a text file, so can easily be adapted for different
 needs.  For example, it might be used in an NDF import command as
 follows:
 
-\begin{quote}
-\begin{small}
-\begin{verbatim}
+\begin{terminalv}
 setenv NDF_IMP_MINE 'fitsimp ndf=^ndf xname=MINE table=$HOME/mine.imp'
-\end{verbatim}
-\end{small}
-\end{quote}
+\end{terminalv}
 
 Here, \file{mine.imp} is the table that drives the importation
 process. This could be different for each format if necessary. An
@@ -1539,9 +1243,7 @@ derived from foreign format datasets. Normally such commands would
 form part of the startup sequence for the package that utilised the
 extension.
 
-\begin{quote}
-\begin{small}
-\begin{verbatim}
+\begin{terminalv}
 #  Append the CCDPACK extension to the list of extensions to be
 #  handled.
       if ($?NDF_XTN) then
@@ -1554,9 +1256,7 @@ extension.
 #  information.
       setenv NDF_IMP_CCDPACK 'ccdimp ndf=^ndf table=$CCDPACK_DIR/^fmt.imp'
       setenv NDF_EXP_CCDPACK 'ccdexp ndf=^ndf table=$CCDPACK_DIR/^fmt.exp'
-\end{verbatim}
-\end{small}
-\end{quote}
+\end{terminalv}
 
 Note that we have specified keyword translation tables here (for use
 in the import and export commands) which depend on the foreign data
@@ -1662,20 +1362,20 @@ library in format conversion commands, \st{etc:}
 \begin{center}
 \begin{tabular}{|l|l|}
 \hline
-{\bf Token} & {\bf Value}\\
+\textbf{Token} & \textbf{Value}\\
 \hline\hline
-{\bf dir}  & Directory in which the foreign file resides\\
-{\bf name} & Foreign file name (without directory or extension)\\
-{\bf namecl} & Cleaned version of {\bf name} (all non-alphanumeric characters
+\textbf{dir}  & Directory in which the foreign file resides\\
+\textbf{name} & Foreign file name (without directory or extension)\\
+\textbf{namecl} & Cleaned version of \textbf{name} (all non-alphanumeric characters
 replaced by underscores)\\
-{\bf type} & Foreign file extension (with leading `.')\\
-{\bf vers} & Foreign file version number (blank if not supported)\\
-{\bf fxs}  & Foreign extension specifier (see \S\ref{sect:fxs} )\\
-{\bf fxscl} & Clean version of {\bf fxs} (all non-alphanumeric characters
+\textbf{type} & Foreign file extension (with leading `.')\\
+\textbf{vers} & Foreign file version number (blank if not supported)\\
+\textbf{fxs}  & Foreign extension specifier (see \S\ref{sect:fxs} )\\
+\textbf{fxscl} & Clean version of \textbf{fxs} (all non-alphanumeric characters
 replaced by underscores)\\
-{\bf fmt}  & Foreign format name (upper case)\\
-{\bf ndf}  & Full name of the native NDF format copy of the dataset\\
-{\bf xtn}  & Name of the NDF extension (upper case)\\
+\textbf{fmt}  & Foreign format name (upper case)\\
+\textbf{ndf}  & Full name of the native NDF format copy of the dataset\\
+\textbf{xtn}  & Name of the NDF extension (upper case)\\
 \hline
 \end{tabular}
 \end{center}
@@ -1692,22 +1392,22 @@ where $<$CTX$>$ is the name of a ``context'' within which message
 token substitution takes place. The following table shows which tokens
 are defined for use within each context:
 
-\newcommand{\yes}[0]{$\surd$}
-\newcommand{\no}[0]{$\times$}
+\providecommand{\yes}[0]{$\surd$}
+\providecommand{\no}[0]{$\times$}
 \begin{center}
 \begin{tabular}{r|l|cccccccccc|}
 \multicolumn{2}{c}{}&\multicolumn{9}{c}{\st{Token}}\\
 \cline{3-12}
-\multicolumn{2}{c|}{}&{\bf dir}&{\bf name}&{\bf namecl}&{\bf type}&{\bf vers}
-&{\bf fxs}&{\bf fxscl}&{\bf fmt}&{\bf ndf}&{\bf xtn}\\
+\multicolumn{2}{c|}{}&\textbf{dir}&\textbf{name}&\textbf{namecl}&\textbf{type}&\textbf{vers}
+&\textbf{fxs}&\textbf{fxscl}&\textbf{fmt}&\textbf{ndf}&\textbf{xtn}\\
 \cline{2-12}
-&{\bf FROM} & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \no \\
-&{\bf TO}   & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \no \\
-&{\bf DEL}  & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \no  & \no \\
-\st{Context} &{\bf KEEP} & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \no  & \no \\
-&{\bf TEMP} & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \no & \no \\
-&{\bf IMP}  & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes \\
-&{\bf EXP}  & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes \\
+&\textbf{FROM} & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \no \\
+&\textbf{TO}   & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \no \\
+&\textbf{DEL}  & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \no  & \no \\
+\st{Context} &\textbf{KEEP} & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \no  & \no \\
+&\textbf{TEMP} & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \no & \no \\
+&\textbf{IMP}  & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes \\
+&\textbf{EXP}  & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes & \yes \\
 \cline{2-12}
 \end{tabular}
 \end{center}
